force-app/main/default/objects/Product2/fields/Bano4__c.field-meta.xml
<CustomField>
    <fullName>Bano4__c</fullName>
    <formula>Tipo_de_inmueble__r.Bano4__c</formula>
    <label>Baño 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>