force-app/main/default/objects/Product2/fields/Bano_3__c.field-meta.xml
<CustomField>
    <fullName>Bano_3__c</fullName>
    <formula>Tipo_de_inmueble__r.Bano_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baño 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>