force-app/main/default/objects/Product2/fields/Bano_5__c.field-meta.xml
<CustomField>
    <fullName>Bano_5__c</fullName>
    <formula>Tipo_de_inmueble__r.Bano_5__c</formula>
    <label>Baño 5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>