force-app/main/default/objects/Product2/fields/Bloque__c.field-meta.xml
<CustomField>
    <fullName>Bloque__c</fullName>
    <label>Bloque</label>
    <length>10</length>
    <type>Text</type>
</CustomField>