force-app/main/default/objects/Product2/fields/Bodega__c.field-meta.xml
<CustomField>
    <fullName>Bodega__c</fullName>
    <formula>Tipo_de_inmueble__r.Bodega__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bodega</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>