force-app/main/default/objects/Product2/fields/CONGA_producto_adenda__c.field-meta.xml
<CustomField>
    <fullName>CONGA_producto_adenda__c</fullName>
    <formula>Name + &quot; situada en planta nº &quot; + Planta__c + &quot; con una extension aproximada de &quot; + TEXT(Superficie_Construida_total_con_ZZCC_m2__c) + &quot; m2.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_producto adenda</label>
    <type>Text</type>
</CustomField>