force-app/main/default/objects/Product2/fields/CONGA_TextVivCab1__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TextVivCab1__c</fullName>
    <formula>&apos;, CP &apos; + 
IF(OR(ISBLANK(Codigo_postal__c),ISNULL(Codigo_postal__c)),&apos; __________ &apos;,Codigo_postal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TextVivCab1</label>
    <type>Text</type>
</CustomField>