force-app/main/default/objects/Product2/fields/CONGA_TextVivCab__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TextVivCab__c</fullName>
    <formula>IF(OR(ISBLANK(Tipo_de_via__c),ISNULL(Tipo_de_via__c)), &apos; __________ &apos; ,Tipo_de_via__c) + &apos; &apos; + 
IF(OR(ISBLANK(Nombre_Via__c),ISNULL(Nombre_Via__c)), &apos; __________ &apos; ,Nombre_Via__c) + &apos; num. &apos; + IF(OR(ISBLANK(N_Via__c),ISNULL(N_Via__c)),&apos; __________ &apos;, TEXT(N_Via__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TextVivCab</label>
    <type>Text</type>
</CustomField>