force-app/main/default/objects/Product2/fields/CONGA_TextVivFin__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TextVivFin__c</fullName>
    <formula>IF( Tipologia_Vivienda_Garaje_Trastero_Local__c = &apos;Vivienda&apos;, &apos;comprador de la vivienda sita en &apos; + IF(OR(ISBLANK(Tipo_de_via__c),ISNULL(Tipo_de_via__c)),&apos; __________ &apos;,Tipo_de_via__c) + &apos; &apos; + IF(OR(ISBLANK(Nombre_Via__c),ISNULL(Nombre_Via__c)),&apos; __________ &apos;,Nombre_Via__c) + &apos; num. &apos; + IF(OR(ISBLANK(N_Via__c),ISNULL(N_Via__c)),&apos; __________ &apos;,TEXT(N_Via__c)) + &apos; de &apos; + 
IF(OR(ISBLANK(Localidad__c),ISNULL(Localidad__c)),&apos; __________ &apos;,Localidad__c) + &apos;,&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TextVivFin</label>
    <type>Text</type>
</CustomField>