force-app/main/default/objects/Product2/fields/Distrito__c.field-meta.xml
<CustomField>
    <fullName>Distrito__c</fullName>
    <formula>Promocion__r.Distrito__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distrito</label>
    <type>Text</type>
</CustomField>