force-app/main/default/objects/Product2/fields/Dormitorio5__c.field-meta.xml
<CustomField>
    <fullName>Dormitorio5__c</fullName>
    <formula>Tipo_de_inmueble__r.Dormitorio5__c</formula>
    <label>Dormitorio 5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>