force-app/main/default/objects/Product2/fields/Dormitorio_2__c.field-meta.xml
<CustomField>
    <fullName>Dormitorio_2__c</fullName>
    <formula>Tipo_de_inmueble__r.sup_Dormitorio_2__c</formula>
    <label>Dormitorio 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>