force-app/main/default/objects/Product2/fields/Escalera__c.field-meta.xml
<CustomField>
    <fullName>Escalera__c</fullName>
    <label>Escalera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>