force-app/main/default/objects/Product2/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Libre</fullName>
            </value>
            <value>
                <fullName>Apalabrado</fullName>
                <label>Pre-Reservado</label>
            </value>
            <value>
                <fullName>Bloqueado temporalmente</fullName>
                <label>Reserva en gestión</label>
            </value>
            <value>
                <fullName>Bloqueado</fullName>
                <label>Reservado</label>
            </value>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
                <label>Escriturado</label>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Permuta</fullName>
            </value>
            <value>
                <fullName>Canje</fullName>
            </value>
            <value>
                <fullName>Apartado</fullName>
            </value>
            <value>
                <fullName>Asociado</fullName>
                <isActive>false</isActive>
                <label>Asociado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>