force-app/main/default/objects/Product2/fields/estado_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>estado_oportunidad__c</fullName>
    <formula>IF(ISBLANK(Oportunidad__c) , &apos;Libre&apos;,TEXT(Oportunidad__r.StageName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado oportunidad</label>
    <type>Text</type>
</CustomField>