force-app/main/default/objects/Product2/fields/Estudio__c.field-meta.xml
<CustomField>
    <fullName>Estudio__c</fullName>
    <formula>Tipo_de_inmueble__r.Estudio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estudio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>