force-app/main/default/objects/Product2/fields/EsViviendaPiloto__c.field-meta.xml
<CustomField>
    <fullName>EsViviendaPiloto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es vivienda piloto</label>
    <type>Checkbox</type>
</CustomField>