force-app/main/default/objects/Product2/fields/Fase_Venta__c.field-meta.xml
<CustomField>
    <fullName>Fase_Venta__c</fullName>
    <label>Fase Venta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>