force-app/main/default/objects/Product2/fields/Fecha_de_Escrituracion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Escrituracion__c</fullName>
    <formula>Oportunidad__r.Fecha_de_Escrituracion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Escrituración</label>
    <type>Date</type>
</CustomField>