force-app/main/default/objects/Product2/fields/Fecha_firma_Contrato_Compraventa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_firma_Contrato_Compraventa__c</fullName>
    <formula>Oportunidad__r.Fecha_firma_Contrato_Compraventa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha firma Contrato Compraventa</label>
    <type>Date</type>
</CustomField>