force-app/main/default/objects/Product2/fields/FECHAINC__c.field-meta.xml
<CustomField>
    <fullName>FECHAINC__c</fullName>
    <label>Fecha de Inscripción</label>
    <type>Date</type>
</CustomField>