force-app/main/default/objects/Product2/fields/FINCA__c.field-meta.xml
<CustomField>
    <fullName>FINCA__c</fullName>
    <label>FINCA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>