force-app/main/default/objects/Product2/fields/FOLIO__c.field-meta.xml
<CustomField>
    <fullName>FOLIO__c</fullName>
    <label>FOLIO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>