force-app/main/default/objects/Product2/fields/id_ViviendaBaboonlab__c.field-meta.xml
<CustomField>
    <fullName>id_ViviendaBaboonlab__c</fullName>
    <label>id_ViviendaBaboonlab</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>