force-app/main/default/objects/Product2/fields/Idealista__c.field-meta.xml
<CustomField>
    <fullName>Idealista__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Idealista</label>
    <type>Checkbox</type>
</CustomField>