force-app/main/default/objects/Product2/fields/Inmueble_asociado__c.field-meta.xml
<CustomField>
    <fullName>Inmueble_asociado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inmueble asociado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Promocion__c</field>
            <operation>equals</operation>
            <valueField>$Source.Promocion__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inmuebles asociados</relationshipLabel>
    <relationshipName>Inmuebles_asociados</relationshipName>
    <type>Lookup</type>
</CustomField>