force-app/main/default/objects/Product2/fields/INSCRIPCION__c.field-meta.xml
<CustomField>
    <fullName>INSCRIPCION__c</fullName>
    <label>Datos de Localización en el Registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>