force-app/main/default/objects/Product2/fields/Lavadero__c.field-meta.xml
<CustomField>
    <fullName>Lavadero__c</fullName>
    <formula>Tipo_de_inmueble__r.Lavadero__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lavadero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>