force-app/main/default/objects/Product2/fields/Letra_N_Puerta__c.field-meta.xml
<CustomField>
    <fullName>Letra_N_Puerta__c</fullName>
    <label>Letra/Nº Puerta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>