force-app/main/default/objects/Product2/fields/LETRAFINCADH__c.field-meta.xml
<CustomField>
    <fullName>LETRAFINCADH__c</fullName>
    <label>Letra Finca División Horizontal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>