force-app/main/default/objects/Product2/fields/LIBRO__c.field-meta.xml
<CustomField>
    <fullName>LIBRO__c</fullName>
    <label>LIBRO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>