force-app/main/default/objects/Product2/fields/Limpiar_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Limpiar_oportunidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limpiar oportunidad</label>
    <type>Checkbox</type>
</CustomField>