force-app/main/default/objects/Product2/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <formula>Promocion__r.Localidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Localidad</label>
    <type>Text</type>
</CustomField>