force-app/main/default/objects/Product2/fields/LUGARREG__c.field-meta.xml
<CustomField>
    <fullName>LUGARREG__c</fullName>
    <label>Lugar Registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>