force-app/main/default/objects/Product2/fields/Mostrar_precio_a_comerciales__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_precio_a_comerciales__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mostrar precio a comerciales</label>
    <type>Checkbox</type>
</CustomField>