force-app/main/default/objects/Product2/fields/MotivosBloqueo__c.field-meta.xml
<CustomField>
    <fullName>MotivosBloqueo__c</fullName>
    <label>Motivos de bloqueo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>