force-app/main/default/objects/Product2/fields/N_banos__c.field-meta.xml
<CustomField>
    <fullName>N_banos__c</fullName>
    <formula>Tipo_de_inmueble__r.N_de_banos__c</formula>
    <label>Nº baños</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>