force-app/main/default/objects/Product2/fields/N_habitaciones__c.field-meta.xml
<CustomField>
    <fullName>N_habitaciones__c</fullName>
    <formula>Tipo_de_inmueble__r.N_de_habitaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº Dormitorios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>