force-app/main/default/objects/Product2/fields/N_Via__c.field-meta.xml
<CustomField>
    <fullName>N_Via__c</fullName>
    <formula>Promocion__r.N_Via__c</formula>
    <label>Nº Vía</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>