force-app/main/default/objects/Product2/fields/N_Vivienda_Garaje_Trastero_Local__c.field-meta.xml
<CustomField>
    <fullName>N_Vivienda_Garaje_Trastero_Local__c</fullName>
    <label>Nº Vivienda/Garaje/Trastero/Local</label>
    <length>20</length>
    <type>Text</type>
</CustomField>