force-app/main/default/objects/Product2/fields/NFINCADH__c.field-meta.xml
<CustomField>
    <fullName>NFINCADH__c</fullName>
    <label>Nº Finca División Horizontal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>