force-app/main/default/objects/Product2/fields/Nombre_Via__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Via__c</fullName>
    <formula>Promocion__r.Nombre_via__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Vía</label>
    <type>Text</type>
</CustomField>