force-app/main/default/objects/Product2/fields/NumeroCatastral__c.field-meta.xml
<CustomField>
    <fullName>NumeroCatastral__c</fullName>
    <description>Referencia Catastral para la ficha de escrituración Conga</description>
    <formula>BLANKVALUE(NFINCADH__c, Promocion__r.Referencia_catastral__c)</formula>
    <label>Número Catastral</label>
    <type>Text</type>
</CustomField>