force-app/main/default/objects/Product2/fields/NUMREGPROP__c.field-meta.xml
<CustomField>
    <fullName>NUMREGPROP__c</fullName>
    <label>Nº Registro Propiedad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>