force-app/main/default/objects/Product2/fields/Orientacion_Viv__c.field-meta.xml
<CustomField>
    <fullName>Orientacion_Viv__c</fullName>
    <label>Orientación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Sur</fullName>
            </value>
            <value>
                <fullName>Este</fullName>
            </value>
            <value>
                <fullName>Oeste</fullName>
            </value>
            <value>
                <fullName>Noreste</fullName>
            </value>
            <value>
                <fullName>Noroeste</fullName>
            </value>
            <value>
                <fullName>Sureste</fullName>
            </value>
            <value>
                <fullName>Suroeste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>