force-app/main/default/objects/Product2/fields/Pendiente_de_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_aprobacion__c</fullName>
    <description>Check que indica si el precio es distinto del precio propuesto. Sirve para indicar si está pendiente de aprobación.</description>
    <formula>AND(Precio_propuesto__c  &lt;&gt;  Precio__c, NOT(ISBLANK(Precio_propuesto__c)), NOT(ISBLANK(Precio__c)), Promocion__r.Pendiente_de_aprobacion_de_tarifario__c )</formula>
    <inlineHelpText>Indica si el precio está pendiente de aprobación</inlineHelpText>
    <label>Pendiente de aprobacion</label>
    <type>Checkbox</type>
</CustomField>