force-app/main/default/objects/Product2/fields/Planta__c.field-meta.xml
<CustomField>
    <fullName>Planta__c</fullName>
    <label>Planta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>