force-app/main/default/objects/Product2/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <label>Portal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>