force-app/main/default/objects/Product2/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>