force-app/main/default/objects/Product2/fields/Precio_con_anejos_incluidos__c.field-meta.xml
<CustomField>
    <fullName>Precio_con_anejos_incluidos__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Precio con anejos incluidos</label>
    <type>Checkbox</type>
</CustomField>