force-app/main/default/objects/Product2/fields/Precio_propuesto__c.field-meta.xml
<CustomField>
    <fullName>Precio_propuesto__c</fullName>
    <label>Precio propuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>