force-app/main/default/objects/Product2/fields/PropiedadesGaraje__c.field-meta.xml
<CustomField>
    <fullName>PropiedadesGaraje__c</fullName>
    <formula>IF(NOT(OR(ISPICKVAL(Tipo_de_inmueble__r.Tipo__c, &apos;Trastero&apos;), ISPICKVAL(Tipo_de_inmueble__r.Tipo__c, &apos;Garaje&apos;))),IF(
  OR(ISPICKVAL(Tipologia_de_vivienda__c , &apos;Chalet&apos;), 
     ISPICKVAL(Tipologia_de_vivienda__c , &apos;Piso&apos;)
  ),IF(ISPICKVAL(Tipologia_de_vivienda__c , &apos;Chalet&apos;), &apos;Vivienda tipo &apos; + IF(OR(ISBLANK(TEXT(Tipo_de_vivienda__c)),ISNULL(TEXT(Tipo_de_vivienda__c))),&apos; __________ &apos;, TEXT(Tipo_de_vivienda__c)) + 
IF(  VALUE( N_Vivienda_Garaje_Trastero_Local__c )  &gt; 0, &apos;, chalet &apos; + IF(OR(ISBLANK(N_Vivienda_Garaje_Trastero_Local__c),ISNULL(N_Vivienda_Garaje_Trastero_Local__c)),&apos; __________ &apos;, N_Vivienda_Garaje_Trastero_Local__c),&apos;&apos;)
  , &apos;&apos;) + IF(ISPICKVAL(Tipologia_de_vivienda__c , &apos;Piso&apos;), &apos;Vivienda tipo &apos; + IF(OR(ISBLANK(TEXT(Tipo_de_vivienda__c)),ISNULL(TEXT(Tipo_de_vivienda__c))),&apos; __________ &apos;, TEXT(Tipo_de_vivienda__c)) + IF(NOT(OR(ISBLANK(Portal__c),ISNULL(Portal__c))),&apos;, Portal &apos; + IF(OR(ISBLANK(Portal__c),ISNULL(Portal__c)),&apos; __________ &apos;, Portal__c), &apos;&apos;) + IF(NOT(OR(ISBLANK(Planta__c),ISNULL(Planta__c))),&apos;, Planta &apos; + IF(OR(ISBLANK(Planta__c),ISNULL(Planta__c)),&apos; __________ &apos;, Planta__c), &apos;&apos;) + IF(NOT(OR(ISBLANK(Letra_N_Puerta__c),ISNULL(Letra_N_Puerta__c))),&apos;, Letra &apos; + IF(OR(ISBLANK(Letra_N_Puerta__c),ISNULL(Letra_N_Puerta__c)),&apos; __________ &apos;, Letra_N_Puerta__c), &apos;&apos;), &apos;&apos;) + &apos;, cuya superficie construida aproximada es &apos; + IF(OR(ISBLANK(TEXT(Superficie_Construida_total_con_ZZCC_m2__c)),ISNULL(TEXT(Superficie_Construida_total_con_ZZCC_m2__c))),&apos; __________ &apos;, TEXT(Superficie_Construida_total_con_ZZCC_m2__c)) + &apos; metros cuadrados. Consta de &apos; + IF(OR(ISBLANK(TEXT(N_habitaciones__c)),ISNULL(TEXT(N_habitaciones__c))),&apos; __________ &apos;, TEXT(N_habitaciones__c)) + &apos; dormitorios, &apos; + IF(OR(ISBLANK(TEXT(N_banos__c)),ISNULL(TEXT(N_banos__c))),&apos; __________ &apos;, TEXT(N_banos__c)) + &apos; cuartos de baño&apos; + IF(AND(OR(NOT(ISBLANK(sup_Cocina__c)),NOT(ISNULL(sup_Cocina__c))), sup_Cocina__c &gt; 0),&apos;, cocina&apos;,&apos;&apos;) + IF(AND(OR(NOT(ISBLANK(sup_Salon__c)),NOT(ISNULL(sup_Salon__c))), sup_Salon__c &gt; 0),&apos;, tendedero&apos;,&apos;&apos;) + IF(AND(OR(NOT(ISBLANK(Superficie_Terrazas_Descubiertas__c)),NOT(ISNULL(Superficie_Terrazas_Descubiertas__c))), Superficie_Terrazas_Descubiertas__c &gt; 0),&apos;, terraza&apos;,&apos;&apos;) + IF(AND(OR(NOT(ISBLANK(Superficie_Terrazas_Cubiertas__c)),NOT(ISNULL(Superficie_Terrazas_Cubiertas__c))),Superficie_Terrazas_Cubiertas__c &gt; 0),&apos;, terraza cubierta&apos;,&apos;&apos;) + &apos;.&apos;, &apos;&apos; ), &apos;&apos;) + IF(ISPICKVAL(Tipo_de_inmueble__r.Tipo__c, &apos;Trastero&apos;), &apos;Trastero nº &apos; + IF(OR(ISBLANK(Name),ISNULL(Name)),&apos; __________ &apos;, Name) + &apos; situado en planta nº &apos; + IF(OR(ISBLANK(Planta__c),ISNULL(Planta__c)),&apos; __________ &apos;, Planta__c) + &apos;, con una superficie construida aproximada con Zonas Comunes de &apos; + IF(OR(ISBLANK(TEXT(Superficie_Construida_total_con_ZZCC_m2__c)),ISNULL(TEXT(Superficie_Construida_total_con_ZZCC_m2__c))),&apos; __________ &apos;, TEXT(Superficie_Construida_total_con_ZZCC_m2__c)) + &apos;m2.&apos;, &apos;&apos;) + IF(ISPICKVAL(Tipo_de_inmueble__r.Tipo__c, &apos;Garaje&apos;), &apos;&apos; + IF(OR(ISBLANK(Name),ISNULL(Name)),&apos; _______ &apos;, Name) + &apos; situado en planta nº &apos; + IF(OR(ISBLANK(Planta__c),ISNULL(Planta__c)),&apos; _____ &apos;, Planta__c) + &apos;, con una superficie construida aproximada con Zonas Comunes de &apos; + IF(OR(ISBLANK(TEXT(Superficie_Construida_total_con_ZZCC_m2__c)),ISNULL(TEXT(Superficie_Construida_total_con_ZZCC_m2__c))),&apos; _____ &apos;, TEXT(Superficie_Construida_total_con_ZZCC_m2__c)) + &apos;m2.&apos;, &apos;&apos;)
+ &apos;, con una Superficie Útil de &apos; + IF(ISBLANK(TEXT(Superficie_Util_m2__c)),&apos; __________ &apos;, TEXT(Superficie_Util_m2__c) + &apos;m2.&apos;)+ &apos;, y con un Precio de&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propiedades Garaje</label>
    <type>Text</type>
</CustomField>